--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=StudentHousingAppDatabase;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=StudentHousingAppDatabase;Trusted_Connection=True;",
+    "StudentContext": "Server=(localdb)\\mssqllocaldb;Database=StudentHousingApp.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
