basic functionalities working

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=StudentHousingAppDatabase;Trusted_Connection=True;",
-    "StudentContext": "Server=(localdb)\\mssqllocaldb;Database=StudentHousingApp.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=student.db"
   },
   "Logging": {
     "LogLevel": {
